force-app/main/default/objects/Tabulacao__c/Tabulacao__c.object-meta.xml
<CustomObject>
    <label>Tabulação</label>
    <nameField>
        <label>Nome da Tabulação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabulações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>