force-app/main/default/objects/Tabulacao__c/fields/CodigoAtribuicao__c.field-meta.xml
<CustomField>
    <fullName>CodigoAtribuicao__c</fullName>
    <label>Código de Atribuição</label>
    <length>80</length>
    <type>Text</type>
</CustomField>