force-app/main/default/objects/Tabulacao__c/fields/CodigoKnowledgeBase__c.field-meta.xml
<CustomField>
    <fullName>CodigoKnowledgeBase__c</fullName>
    <label>Código para KnowledgeBase</label>
    <length>80</length>
    <type>Text</type>
</CustomField>