force-app/main/default/objects/Tabulacao__c/fields/CodigoTabulacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoTabulacao__c</fullName>
    <externalId>true</externalId>
    <label>Código da Tabulação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>