force-app/main/default/objects/Tabulacao__c/fields/DescricaoCasoPadrao__c.field-meta.xml
<CustomField>
    <fullName>DescricaoCasoPadrao__c</fullName>
    <label>Descrição Caso Padrão</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>