force-app/main/default/objects/Tabulacao__c/fields/DireitoPadrao__c.field-meta.xml
<CustomField>
    <fullName>DireitoPadrao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direito Padrão</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Tabulações</relationshipLabel>
    <relationshipName>Tabulacoes</relationshipName>
    <type>Lookup</type>
</CustomField>