force-app/main/default/objects/Tabulacao__c/fields/FormulaVisibilidade__c.field-meta.xml
<CustomField>
    <fullName>FormulaVisibilidade__c</fullName>
    <label>Formula de Visibilidade</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>