force-app/main/default/objects/Tabulacao__c/fields/PalavrasChavesBusca__c.field-meta.xml
<CustomField>
    <fullName>PalavrasChavesBusca__c</fullName>
    <label>Palavras chaves de busca</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>