force-app/main/default/objects/Tabulacao__c/fields/PermiteAtendimento__c.field-meta.xml
<CustomField>
    <fullName>PermiteAtendimento__c</fullName>
    <label>Permite Atendimento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente - Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Cliente - Pessoa Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>