force-app/main/default/objects/Tabulacao__c/fields/PermiteFluxoParalelo__c.field-meta.xml
<CustomField>
    <fullName>PermiteFluxoParalelo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite Fluxo Paralelo</label>
    <type>Checkbox</type>
</CustomField>