force-app/main/default/objects/Tabulacao__c/fields/PrioridadeCasoPadrao__c.field-meta.xml
<CustomField>
    <fullName>PrioridadeCasoPadrao__c</fullName>
    <label>Prioridade Caso Padrão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>