force-app/main/default/objects/Tabulacao__c/fields/ScriptAtendimento__c.field-meta.xml
<CustomField>
    <fullName>ScriptAtendimento__c</fullName>
    <label>Script de Atendimento</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>