force-app/main/default/objects/Tabulacao__c/fields/SLAConclusao__c.field-meta.xml
<CustomField>
    <fullName>SLAConclusao__c</fullName>
    <inlineHelpText>Horas para finalização do Marco</inlineHelpText>
    <label>SLA de Conclusão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>