force-app/main/default/objects/Tabulacao__c/fields/TabulacaoInterna__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoInterna__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As tabulações internas não ficam visíveis para o componente de criação de casos de atendimento, mas somente para casos internos.</description>
    <inlineHelpText>As tabulações internas não ficam visíveis para o componente de criação de casos de atendimento, mas somente para casos internos.</inlineHelpText>
    <label>Tabulação Interna</label>
    <type>Checkbox</type>
</CustomField>