force-app/main/default/objects/Tabulacao__c/fields/TabulacaoOculta__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoOculta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As tabulações ocultas não ficam visíveis para os componentes de criação de casos.</description>
    <inlineHelpText>As tabulações ocultas não ficam visíveis para os componentes de criação de casos.</inlineHelpText>
    <label>Tabulação Oculta</label>
    <type>Checkbox</type>
</CustomField>