force-app/main/default/objects/Tabulacao__c/fields/TipoAtribuicao__c.field-meta.xml
<CustomField>
    <fullName>TipoAtribuicao__c</fullName>
    <label>Tipo Atribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criador do Caso</fullName>
            </value>
            <value>
                <fullName>Fila Salesforce</fullName>
            </value>
            <value>
                <fullName>Regra de Atribuição</fullName>
            </value>
            <value>
                <fullName>Proprietário da Conta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>