force-app/main/default/objects/Tabulacao__c/fields/TipoCasoPadrao__c.field-meta.xml
<CustomField>
    <fullName>TipoCasoPadrao__c</fullName>
    <label>Tipo Caso Padrão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitação</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Informação</fullName>
            </value>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>Resolução</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>