force-app/main/default/objects/Tabulacao__c/fields/TipoFluxo__c.field-meta.xml
<CustomField>
    <fullName>TipoFluxo__c</fullName>
    <label>Tipo Fluxo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Tabulado</fullName>
            </value>
            <value>
                <fullName>Padrão</fullName>
            </value>
            <value>
                <fullName>Atendimento Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>