force-app/main/default/objects/Tabulacao__c/recordTypes/FluxoTrabalho.recordType-meta.xml
<RecordType>
    <fullName>FluxoTrabalho</fullName>
    <active>true</active>
    <label>FluxoTrabalho</label>
</RecordType>