force-app/main/default/objects/Tabulacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoTabulacao__c</columns>
    <columns>Descricao__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TipoFluxo__c</columns>
    <columns>TabulacaoOculta__c</columns>
    <columns>TabulacaoInterna__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>